syntax = "proto3";

package posts;

option go_package = "github.com/Hinsane5/hoshiBmaTchi/backend/proto/posts";

service PostsService {
    rpc GenerateUploadURL(GenerateUploadURLRequest) returns (GenerateUploadURLResponse);
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
    rpc GetPostsByUserID(GetPostsByUserIDRequest) returns (GetPostsResponse);
    rpc GetPostByID(GetPostByIDRequest) returns (PostResponse);
    rpc LikePost(LikePostRequest) returns (LikePostResponse);
    rpc UnlikePost(UnlikePostRequest) returns (UnlikePostResponse);
    rpc CreateComment(CreateCommentRequest) returns (CommentResponse);
    rpc GetCommentsForPost(GetCommentsForPostRequest) returns (GetCommentsForPostResponse);
    rpc GetHomeFeed(GetHomeFeedRequest) returns (GetHomeFeedResponse);
    rpc ToggleSavePost(ToggleSavePostRequest) returns (ToggleSavePostResponse);
    rpc CreateCollection(CreateCollectionRequest) returns (CollectionResponse);
    rpc GetUserCollections(GetUserCollectionsRequest) returns (GetUserCollectionsResponse);
    rpc GetUserMentions(GetUserMentionsRequest) returns (GetPostsResponse);
    rpc GetReels (GetReelsRequest) returns (GetReelsResponse);
    rpc GetExplorePosts(GetExplorePostsRequest) returns (GetExplorePostsResponse);
    rpc GetUserReels(GetUserReelsRequest) returns (GetPostsResponse); 
    rpc GetCollectionPosts(GetCollectionPostsRequest) returns (GetCollectionPostsResponse);
    rpc UpdateCollection(UpdateCollectionRequest) returns (CollectionResponse);
    rpc DeleteCollection(DeleteCollectionRequest) returns (DeleteCollectionResponse);
    rpc GetPostReports(Empty) returns (PostReportListResponse);
    rpc ReviewPostReport(ReviewReportRequest) returns (Response);
}

message GenerateUploadURLRequest {
    string file_name = 1;
    string file_type = 2; // misal: "image/jpeg"
}

message GenerateUploadURLResponse {
    string upload_url = 1;     // URL Presigned untuk diunggah
    string object_name = 2;    // Nama file unik yang akan disimpan di DB
}

message CreatePostRequest {
    string user_id = 1;
    repeated PostMediaItem media = 2; 
    string caption = 4;
    string location = 5;
    bool is_reel = 6;
}

message PostMediaItem {
    string media_object_name = 1;
    string media_type = 2;
}



message CreatePostResponse {
    PostResponse post = 1;
}

message GetPostsByUserIDRequest {
    string user_id = 1;
}

message GetPostsResponse {
    repeated PostResponse posts = 1;
}

message GetPostByIDRequest {
    string post_id = 1;
    string user_id = 2;
}

message PostResponse {
    string id = 1;
    string user_id = 2;
    repeated PostMediaResponse media = 3; 
    string caption = 5;
    string location = 6;
    string created_at = 7;
    int32 likes_count = 8;
    bool is_liked = 9;
    int32 comments_count = 10;
    bool is_reel = 11;
}

message PostMediaResponse {
    string media_url = 1;
    string media_type = 2;
}

message LikePostRequest{
    string user_id = 1;
    string post_id = 2;
}

message LikePostResponse{
    string message = 1;
}

message UnlikePostRequest{
    string user_id = 1;
    string post_id = 2;
}

message UnlikePostResponse{
    string message = 1;
}

message CreateCommentRequest {
    string user_id = 1; 
    string post_id = 2;
    string content = 3;
}

message GetCommentsForPostRequest {
    string post_id = 1;
}

message GetCommentsForPostResponse {
    repeated CommentResponse comments = 1;
}

message CommentResponse {
    string id = 1;
    string post_id = 2;
    string user_id = 3; 
    string content = 4;
    string created_at = 5;
}

message GetHomeFeedRequest {
  string user_id = 1; 
  int32 limit = 2;
  int32 offset = 3;
}

message GetHomeFeedResponse {
  repeated PostResponse posts = 1;
}

message ToggleSavePostRequest {
    string user_id = 1;
    string post_id = 2;
    string collection_id = 3;
}

message ToggleSavePostResponse {
    bool is_saved = 1; 
    string message = 2;
}

message CreateCollectionRequest {
    string user_id = 1;
    string name = 2;
}

message CollectionResponse {
    string id = 1;
    string name = 2;
    string user_id = 3;
    repeated string cover_images = 4; // For the profile grid preview
}

message GetUserCollectionsRequest {
    string user_id = 1;
}

message GetUserCollectionsResponse {
    repeated CollectionResponse collections = 1;
}

message GetUserMentionsRequest {
    string user_id = 1; 
    string target_user_id = 2; 
    int32 limit = 3;
    int32 offset = 4;
}

message GetReelsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetReelsResponse {
  repeated PostResponse posts = 1; 
}

message GetExplorePostsRequest {
    string user_id = 1;
    int32 limit = 2;
    int32 offset = 3;
    string hashtag = 4;
}

message GetExplorePostsResponse {
    repeated PostResponse posts = 1;
}

message GetUserReelsRequest {
    string user_id = 1;
}

message GetCollectionPostsRequest {
    string collection_id = 1;
    string user_id = 2;
    int32 limit = 3;
    int32 offset = 4;
}

message GetCollectionPostsResponse {
    repeated PostResponse posts = 1;
}

message UpdateCollectionRequest {
    string collection_id = 1;
    string user_id = 2;
    string name = 3;
}

message DeleteCollectionRequest {
    string collection_id = 1;
    string user_id = 2;
}

message DeleteCollectionResponse {
    bool success = 1;
    string message = 2;
}

message Empty {}

message Response {
    string message = 1;
    bool success = 2;
}

message PostReportItem {
    string id = 1;
    string reporter_id = 2;
    string post_id = 3;
    string reason = 4;
    string status = 5;
    string created_at = 6;
}

message PostReportListResponse {
    repeated PostReportItem reports = 1;
}

message ReviewReportRequest {
    string report_id = 1;
    string action = 2;
}