syntax = "proto3";

package users;

option go_package = "github.com/Hinsane5/hoshiBmaTchi/backend/proto/users";

import "google/protobuf/timestamp.proto";

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);

  rpc SendOtp(SendOtpRequest) returns (SendOtpResponse);
  rpc LoginWithGoogle(LoginWithGoogleRequest) returns (TokenResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc VerifyLogin2FA(VerifyLogin2FARequest) returns (TokenResponse);
  rpc RequestPasswordReset(RequestPasswordResetRequest) returns (SendOtpResponse);
  rpc PerformPasswordReset(PerformPasswordResetRequest) returns (SendOtpResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc FollowUser(FollowUserRequest) returns (FollowUserResponse);
  rpc UnfollowUser(UnfollowUserRequest) returns (UnfollowUserResponse);
  rpc GetFollowingList(GetFollowingListRequest) returns (GetFollowingListResponse);
  rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserProfileResponse);
  rpc GetSuggestedUsers(GetSuggestedUsersRequest) returns (GetSuggestedUsersResponse);
  rpc GetFollowingProfiles(GetFollowingListRequest) returns (GetFollowingProfilesResponse);
  rpc BlockUser(BlockUserRequest) returns (BlockUserResponse);
  rpc UnblockUser(UnblockUserRequest) returns (UnblockUserResponse);
  rpc GetBlockedList(GetBlockedListRequest) returns (GetBlockedListResponse);

  rpc UpdateUserProfile(UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
  rpc UpdateNotificationSettings(UpdateNotificationSettingsRequest) returns (UpdateNotificationSettingsResponse);
  rpc UpdatePrivacySettings(UpdatePrivacySettingsRequest) returns (UpdatePrivacySettingsResponse);
  rpc GetSettings(GetSettingsRequest) returns (GetSettingsResponse);
  rpc AddCloseFriend(ManageRelationRequest) returns (ManageRelationResponse);
  rpc RemoveCloseFriend(ManageRelationRequest) returns (ManageRelationResponse);
  rpc GetCloseFriends(GetListRequest) returns (GetListResponse);
  rpc HideStoryFromUser(ManageRelationRequest) returns (ManageRelationResponse);
  rpc UnhideStoryFromUser(ManageRelationRequest) returns (ManageRelationResponse);
  rpc GetHiddenStoryUsers(GetListRequest) returns (GetListResponse);
  rpc RequestVerification(RequestVerificationRequest) returns (RequestVerificationResponse);

  rpc GetAllUsers(Empty) returns (UserListResponse);
  rpc ToggleUserBan(ToggleUserBanRequest) returns (Response);
  rpc GetSubscribedEmails(Empty) returns (EmailListResponse);
  rpc GetVerificationRequests(Empty) returns (VerificationListResponse);
  rpc ReviewVerification(ReviewVerificationRequest) returns (Response);
  rpc GetUserReports(Empty) returns (UserReportListResponse);
  rpc ReviewUserReport(ReviewReportRequest) returns (Response);

  rpc ReportUser(ReportUserRequest) returns (Response);
  rpc GetUserEmail(GetUserEmailRequest) returns (GetUserEmailResponse);
}

message LoginWithGoogleRequest{
  string id_token = 1 [json_name = "id_token"];
}

message TokenResponse{
  string access_token = 1 [json_name = "access_token"];
  string refresh_token = 2 [json_name = "refresh_token"];
}

message LoginUserRequest{
  string email_or_username = 1;
  string password = 2;
}

message LoginUserResponse {
  bool two_fa_required = 1 [json_name = "two_fa_required"];
  TokenResponse tokens = 2 [json_name = "tokens"]; 
}

message VerifyLogin2FARequest {
  string email = 1;
  string otp_code = 2 [json_name = "otp_code"];
}

message SendOtpRequest{
  string email = 1;
}

message SendOtpResponse{
  string message = 1;
}

message RequestPasswordResetRequest {
  string email = 1;
}

message PerformPasswordResetRequest {
  string token = 1;
  string new_password = 2 [json_name = "new_password"];
  string confirm_password = 3 [json_name = "confirm_password"];
}

message RegisterUserRequest {
  string name = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  google.protobuf.Timestamp date_of_birth = 5 [json_name = "date_of_birth"];
  string gender = 6;
  string profile_picture_url = 7 [json_name = "profile_picture_url"];
  string confirm_password = 8 [json_name = "confirm_password"];
  bool subscribe_to_newsletter = 9 [json_name = "subscribe_to_newsletter"];
  bool enable_2fa = 10 [json_name = "enable_2fa"];
  string otp_code = 11 [json_name = "otp_code"];
  string turnstile_token = 12 [json_name = "turnstile_token"];

}

message RegisterUserResponse {
  string user_id = 1 [json_name = "user_id"];
  string name = 2;
  string username = 3;
  string email = 4;
  google.protobuf.Timestamp date_of_birth = 5 [json_name = "date_of_birth"];
  string gender = 6;
  string profile_picture_url = 7 [json_name = "profile_picture_url"];
}

message ValidateTokenRequest{
  string token = 1;
}

message ValidateTokenResponse{
  bool valid = 1;
  string user_id = 2;
  string role = 3;
}

message GetUserProfileRequest {
  string user_id = 1;     
  string viewer_id = 2;  
}

message GetUserProfileResponse {
  string id = 1;
  string username = 2;
  string name = 3;
  string bio = 4;
  string profile_picture_url = 5;
  int64 followers_count = 6;
  int64 following_count = 7;
  bool is_following = 8;
}

message FollowUserRequest {
  string follower_id = 1; 
  string following_id = 2; 
}

message FollowUserResponse {
  string message = 1;
}

message UnfollowUserRequest {
  string follower_id = 1;
  string following_id = 2;
}

message UnfollowUserResponse {
  string message = 1;
}

message GetFollowingListRequest {
  string user_id = 1;
}

message GetFollowingListResponse {
  repeated string following_ids = 1;
}

message UserProfile {
  string user_id = 1;
  string username = 2;
  string name = 3;
  string profile_picture_url = 4;
  bool is_following = 5;
  
  string email = 6;
  bool is_banned = 7;
}

message SearchUsersRequest {
  string query = 1;
  string user_id = 2;
}

message SearchUsersResponse {
  repeated UserProfile users = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetSuggestedUsersRequest {
  string user_id = 1;
}

message GetSuggestedUsersResponse {
  repeated UserProfile users = 1;
}

message GetFollowingProfilesResponse {
  repeated UserProfile users = 1; 
}

message BlockUserRequest {
  string blocker_id = 1;
  string blocked_id = 2;
}

message BlockUserResponse {
  string message = 1;
}

message UnblockUserRequest {
  string blocker_id = 1;
  string blocked_id = 2;
}

message UnblockUserResponse {
  string message = 1;
}

message GetBlockedListRequest {
  string user_id = 1;
}

message GetBlockedListResponse {
  repeated UserProfile users = 1;
}

message UpdateUserProfileRequest {
  string user_id = 1;
  string name = 2;
  string bio = 3;
  string gender = 4;
  string profile_picture_url = 5; // Optional
}

message UpdateUserProfileResponse {
  UserProfile user = 1;
}

message UpdateNotificationSettingsRequest {
  string user_id = 1;
  bool enable_push = 2;
  bool enable_email = 3;
}

message UpdateNotificationSettingsResponse {
  bool success = 1;
}

message UpdatePrivacySettingsRequest {
  string user_id = 1;
  bool is_private = 2;
}

message UpdatePrivacySettingsResponse {
  bool success = 1;
  bool is_private = 2;
}

message GetSettingsRequest {
  string user_id = 1;
}

message GetSettingsResponse {
  bool enable_push = 1;
  bool enable_email = 2;
  bool is_private = 3;
}

message ManageRelationRequest {
  string user_id = 1;
  string target_user_id = 2;
}

message ManageRelationResponse {
  bool success = 1;
}

message GetListRequest {
  string user_id = 1;
}

message GetListResponse {
  repeated UserProfile users = 1;
}

message RequestVerificationRequest {
  string user_id = 1;
  string national_id_number = 2;
  string reason = 3;
  string selfie_url = 4;
}

message RequestVerificationResponse {
  string message = 1; 
}

message Empty {}

message UserListResponse {
  repeated UserProfile users = 1;
}

message ToggleUserBanRequest {
  string user_id = 1;
  bool is_banned = 2;
}

message EmailListResponse {
  repeated string emails = 1;
}

message VerificationRequestItem {
  string id = 1;
  string user_id = 2;
  string username = 3;
  string profile_picture_url = 4;
  string national_id_number = 5;
  string reason = 6;
  string selfie_url = 7;
  string status = 8; // PENDING, ACCEPTED, REJECTED
  string created_at = 9;
}

message VerificationListResponse {
  repeated VerificationRequestItem requests = 1;
}

message ReviewVerificationRequest {
  string request_id = 1;
  string action = 2;
}

message Response {
  string message = 1;
  bool success = 2;
}

message UserReportItem {
  string id = 1;
  string reporter_id = 2;
  string reporter_name = 3;
  string reported_user_id = 4;
  string reported_user_name = 5;
  string reason = 6;
  string status = 7;
  string created_at = 8;
}

message UserReportListResponse {
  repeated UserReportItem reports = 1;
}

message ReviewReportRequest {
  string report_id = 1;
  string action = 2;
}

message ReportUserRequest {
    string reported_user_id = 1;
    string reporter_id = 2;
    string reason = 3;
}

message GetUserEmailRequest {
    string user_id = 1;
}

message GetUserEmailResponse {
    string email = 1;
}